--- a/Intranet2.0/.settings/org.eclipse.wst.common.component
+++ b/Intranet2.0/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Intranet2.0">
+    <wb-module deploy-name="Contratos.Web">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Intranet2.0"/>
-        <property name="java-output-path" value="/Intranet2.0/build/classes"/>
+        <property name="java-output-path" value="/Contratos.Web/build/classes"/>
+        <property name="context-root" value="Contratos.Web"/>
     </wb-module>
 </project-modules>
