--- a/Nucleo.intranet/.settings/org.eclipse.wst.common.component
+++ b/Nucleo.intranet/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Nucleo.intranet">
+    <wb-module deploy-name="Nucleo.integracoes">
         <wb-resource deploy-path="/" source-path="/ejbModule" tag="defaultRootSource"/>
-        <property name="java-output-path" value="/Nucleo.intranet/build/classes"/>
+        <property name="java-output-path" value="/Nucleo.integracoes/build/classes"/>
     </wb-module>
 </project-modules>
