--- a/Contratos.Web/WebContent/views/Cadastro/contrato.xhtml
+++ b/Contratos.Web/WebContent/views/Cadastro/contrato.xhtml
@@ -5,6 +5,8 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 	<ui:define name="conteudo">
-	lala
+		<p:panel header="Projetos">
+			
+		</p:panel>
 	</ui:define>
 </ui:composition>
