--- a/Contratos.Web/WebContent/resources/css/_template.css
+++ b/Contratos.Web/WebContent/resources/css/_template.css
@@ -41,9 +41,7 @@ font {
 }
 
 
-#menu {
-	position: relative;
-	
+#corpo menu {
 	width:80%;
 	height:40px;
 	text-align:center;
@@ -55,7 +53,7 @@ font {
 	position: relative;
 	margin: 10px auto;
 	/* background-color: yellow; */
-	width: 80%;
+	height: 90%;
 	margin-left: 20%;
 	margin-right: 20%;
 	/* height: 100%; */
