--- a/Contratos.Web/WebContent/views/Cadastro/funcionario.xhtml
+++ b/Contratos.Web/WebContent/views/Cadastro/funcionario.xhtml
@@ -7,7 +7,7 @@
 	<ui:define name="conteudo">
 		<br/>
 		<p:tabView>
-			<p:tab title="Cadastro">
+			<p:tab title="Cadastro de Funcionários">
 					<p:fileUpload id="fileupload" label="Selecione o arquivo"
 						 allowTypes="/(\.|\/)(csv)$/"/>
 				 	<h:message for="form"/>
@@ -98,7 +98,7 @@
 							<p:outputLabel value="Data de OIS:"></p:outputLabel>
 						</p:column>
 						<p:column>
-							<p:calendar/>
+							<p:calendar size="10"/>
 						</p:column>
 						<p:column>
 							<p:outputLabel value="Data de admissão:"></p:outputLabel>
@@ -137,7 +137,7 @@
 					</p:row>
 				</p:panelGrid>
 			</p:tab>
-			<p:tab title="Funcionários">
+			<p:tab title="Funcionários Cadastrados">
 			</p:tab>
 		</p:tabView>
 	</ui:define>
