--- a/Contratos.Web/WebContent/views/Cadastro/contratos.xhtml
+++ b/Contratos.Web/WebContent/views/Cadastro/contratos.xhtml
@@ -6,55 +6,91 @@
 	xmlns:p="http://primefaces.org/ui">
 	<ui:define name="conteudo">
 		<br />
-		<p:panelGrid columns="4" styleClass="panel_inf_proj">
-			<p:column styleClass="colLabel">
-				<p:outputLabel value="CN"/>
-			</p:column>
-			<p:column>
-				<p:inputText value="#{projetosBean.projetoSelecionado.cn}"
-							 disabled="true" size="3"/>
-			</p:column>
-			<p:column styleClass="colLabel">
-				<p:outputLabel value="Nome"/>
-			</p:column>
-			<p:column>
-				<p:inputText value="#{projetosBean.projetoSelecionado.descricao}" 
-							 disabled="true" size="50"/>
-			</p:column>
-			<p:column>
-				<p:outputLabel value="Data Inicio"/>
-			</p:column>
-			<p:column>
-				<p:calendar pattern="dd/MM/yyyy"
-				            size="10" value="#{projetosBean.projetoSelecionado.dtInicio.time}"/>
-			</p:column>
-			<p:column>
-				<p:outputLabel value="Data Fim"/>
-			</p:column>
-			<p:column>
-				<p:calendar pattern="dd/MM/yyyy" 
-							size="10" value="#{projetosBean.projetoSelecionado.dtFim.time}"/>
-			</p:column>
-			<p:column>
-				<p:outputLabel value="Atividade"/>
-			</p:column>
-			<p:column>
-				<p:selectOneMenu value="#{projetosBean.projetoSelecionado.atividade}">
-					<f:selectItem itemLabel="Selecione..." noSelectionOption="true"/>
-					<f:selectItems value="#{projetosBean.atividades}" var="atividade" 
-								   itemLabel="#{atividade}" itemValue="#{atividade}"/>
-				</p:selectOneMenu>
-			</p:column>
-			<p:column>
-				<p:outputLabel value="Setor"/>
-			</p:column>
-			<p:column>
-				<p:selectOneMenu value="#{projetosBean.projetoSelecionado.atividade}">
-					<f:selectItem itemLabel="Selecione..." noSelectionOption="true"/>
-					<f:selectItems value="#{projetosBean.atividades}" var="atividade" 
-								   itemLabel="#{atividade}" itemValue="#{atividade}"/>
-				</p:selectOneMenu>
-			</p:column>
-		</p:panelGrid>
+		<p:panel header="Cadastro de Projetos">
+			<p:panelGrid style="width: 100%;" styleClass="panel_inf_proj">
+				<p:row>
+					<p:column styleClass="colLabel">
+						<p:outputLabel value="CN" />
+					</p:column>
+					<p:column>
+						<p:inputText value="#{listaProjetosBean.projetoSelecionado.cn}"
+							disabled="true" size="3" />
+					</p:column>
+					<p:column styleClass="colLabel">
+						<p:outputLabel value="Nome" />
+					</p:column>
+					<p:column>
+						<p:inputText
+							value="#{listaProjetosBean.projetoSelecionado.descricao}"
+							disabled="true" size="50" />
+					</p:column>
+				</p:row>
+				<p:row>
+					<p:column styleClass="colLabel">
+						<p:outputLabel value="Data Inicio" />
+					</p:column>
+					<p:column>
+						<p:calendar pattern="dd/MM/yyyy" size="8" maxlength="10" 
+							value="#{listaProjetosBean.projetoSelecionado.dtInicio.time}" />
+					</p:column>
+					<p:column styleClass="colLabel">
+						<p:outputLabel value="Data Fim" />
+					</p:column>
+					<p:column>
+						<p:calendar pattern="dd/MM/yyyy" size="8" maxlength="10"
+							value="#{listaProjetosBean.projetoSelecionado.dtFim.time}" />
+					</p:column>
+				</p:row>
+				<p:row>
+					<p:column styleClass="colLabel">
+						<p:outputLabel value="Atividade" />
+					</p:column>
+					<p:column>
+						<p:selectOneMenu
+							value="#{listaProjetosBean.projetoSelecionado.atividade}">
+							<f:selectItem itemLabel="Selecione..." noSelectionOption="true" />
+							<f:selectItems value="#{listaProjetosBean.atividades}"
+								var="atividade" itemLabel="#{atividade}"
+								itemValue="#{atividade}" />
+						</p:selectOneMenu>
+					</p:column>
+					<p:column styleClass="colLabel">
+						<p:outputLabel value="Setor" />
+					</p:column>
+					<p:column>
+						<p:selectOneMenu
+							value="#{listaProjetosBean.projetoSelecionado.atividade}">
+							<f:selectItem itemLabel="Selecione..." noSelectionOption="true" />
+							<f:selectItems value="#{listaProjetosBean.atividades}"
+								var="atividade" itemLabel="#{atividade}"
+								itemValue="#{atividade}" />
+						</p:selectOneMenu>
+					</p:column>
+				</p:row>
+				<p:row>
+					<p:column styleClass="colLabel">
+						<p:outputLabel value="Status" />
+					</p:column>
+					<p:column>
+						<p:selectOneMenu
+							value="#{listaProjetosBean.projetoSelecionado.status}">
+							<f:selectItem itemLabel="Selecione..." noSelectionOption="true" />
+							<f:selectItems value="#{listaProjetosBean.status}"
+								var="status" itemLabel="#{status}"
+								itemValue="#{status}" />
+						</p:selectOneMenu>
+					</p:column >
+					<p:column styleClass="colLabel">
+						<p:outputLabel value="Fechamento 1ºPeríodo"/>
+					</p:column>
+					<p:column>
+						<p:calendar pattern="dd/MM" size="5" maxlength="8"
+							/>
+					</p:column>
+				</p:row>
+			</p:panelGrid>
+			<br />
+			<p:commandButton value="Salvar Projeto"/>
+		</p:panel>
 	</ui:define>
 </ui:composition>
