--- a/Contratos.Web/WebContent/views/Cadastro/funcionario.xhtml
+++ b/Contratos.Web/WebContent/views/Cadastro/funcionario.xhtml
@@ -12,49 +12,25 @@
 						 allowTypes="/(\.|\/)(csv)$/"/>
 				 	<h:message for="form"/>
 				 	<br/>
-				 	<p:panelGrid styleClass="panelForm">
-					<p:row>
-						<p:column styleClass="colLabel">
-							<p:outputLabel value="Tipo do contrato:"></p:outputLabel>
-						</p:column>
-						<p:column>
-							<p:selectBooleanButton
-								 offLabel="CLT"
-								onLabel="Pessoa jurídica">
-							</p:selectBooleanButton>
-						</p:column>
-					</p:row>
-
-					<p:row>
-						<p:column styleClass="colLabel">
-							<p:outputLabel value="CNPJ:"></p:outputLabel>
-						</p:column>
-						<p:column>
-							<p:inputText onkeypress="mascara(this, cnpj)" required="true"
-								requiredMessage="CNPJ é um campo obrigatório"
-								/>
-						</p:column>
-					</p:row>
-					<p:row>
-						<p:column styleClass="colLabel">
-							<p:outputLabel value="Nome da empresa:"></p:outputLabel>
-						</p:column>
-						<p:column>
-							<p:inputText size="50" required="true"
-								requiredMessage="Nome da empresa é um campo obrigatório"
-								/>
-						</p:column>
-					</p:row>
+				 	<p:panelGrid styleClass="panel_inf_proj">
+				 	<p:row>
+				 		<p:column styleClass="colLabel">
+				 			<p:outputLabel value="Matrícula"/>
+				 		</p:column>
+				 		<p:column>
+				 			<p:inputText size="5"/>
+				 		</p:column>
+				 	</p:row>
 					<p:row>
 						<p:column styleClass="colLabel">
 							<p:outputLabel value="CPF:"></p:outputLabel>
 						</p:column>
 						<p:column>
-							<p:inputText onkeypress="mascara(this,cpf)"
+							<p:inputText onkeypress="mascara(this, cpf)" required="true"
+								requiredMessage="CPF é um campo obrigatório"
 								/>
 						</p:column>
 					</p:row>
-
 					<p:row>
 						<p:column styleClass="colLabel">
 							<p:outputLabel value="Nome do profissional:"></p:outputLabel>
@@ -77,30 +53,6 @@
 					</p:row>
 					<p:row>
 						<p:column styleClass="colLabel">
-							<p:outputLabel value="Verba (R$):"></p:outputLabel>
-						</p:column>
-						<p:column>
-							<p:inputText/>
-						</p:column>
-						<p:column styleClass="colLabel">
-							<p:outputLabel value="Salário (R$):"></p:outputLabel>
-						</p:column>
-						<p:column>
-							<p:inputText onkeypress="mascara(this,moeda)" required="true"
-								requiredMessage="Selecione o salário do profissional">
-								<f:convertNumber pattern="#,##0.00" type="currency"
-									locale="pt_BR" />
-							</p:inputText>
-						</p:column>
-					</p:row>
-					<p:row>
-						<p:column styleClass="colLabel">
-							<p:outputLabel value="Data de OIS:"></p:outputLabel>
-						</p:column>
-						<p:column>
-							<p:calendar size="10"/>
-						</p:column>
-						<p:column>
 							<p:outputLabel value="Data de admissão:"></p:outputLabel>
 						</p:column>
 						<p:column>
@@ -111,13 +63,6 @@
 					</p:row>
 
 					<p:row>
-						<p:column styleClass="colLabel">
-							<p:outputLabel value="Data final:"></p:outputLabel>
-						</p:column>
-						<p:column>
-							<p:calendar
-								onkeypress="mascara(this,data)" pattern="dd/MM/yyyy" size="10"/>
-						</p:column>
 						<p:column styleClass="colLabel">
 							<p:outputLabel value="Data de rescisão:"></p:outputLabel>
 						</p:column>
