--- a/Contratos.Web/WebContent/views/Cadastro/funcionario.xhtml
+++ b/Contratos.Web/WebContent/views/Cadastro/funcionario.xhtml
@@ -18,7 +18,8 @@
 				 			<p:outputLabel value="Matrícula"/>
 				 		</p:column>
 				 		<p:column>
-				 			<p:inputText size="5"/>
+				 			<p:inputText size="5" value="#{funcionarioBean.funcionario.matricula}"
+				 			required="true" requiredMessage="Matrícula é um campo obrigatório"/>
 				 		</p:column>
 				 	</p:row>
 					<p:row>
@@ -26,7 +27,8 @@
 							<p:outputLabel value="CPF:"></p:outputLabel>
 						</p:column>
 						<p:column>
-							<p:inputText onkeypress="mascara(this, cpf)" required="true"
+							<p:inputText onkeypress="mascara(this, cpf)" value="#{funcionarioBean.funcionario.cpf}"
+								required="true"
 								requiredMessage="CPF é um campo obrigatório"
 								/>
 						</p:column>
@@ -36,7 +38,7 @@
 							<p:outputLabel value="Nome do profissional:"></p:outputLabel>
 						</p:column>
 						<p:column>
-							<p:inputText size="50" required="true"
+							<p:inputText size="50" required="true" value="#{funcionarioBean.funcionario.nome}"
 								requiredMessage="Nome do profissional é um campo obrigatório"
 								/>
 						</p:column>
@@ -47,7 +49,7 @@
 						</p:column>
 						<p:column>
 							<p:inputText
-								size="5" required="true"
+								size="5" required="true" value="#{funcionarioBean.funcionario.cn}"
 								requiredMessage="CN é um campo obrigatório" />
 						</p:column>
 					</p:row>
@@ -57,7 +59,8 @@
 						</p:column>
 						<p:column>
 							<p:calendar
-								onkeypress="mascara(this,data)" pattern="dd/MM/yyyy" size="10"
+								onkeypress="mascara(this,data)" value="#{funcionarioBean.funcionario.dtAdmissao}"
+								pattern="dd/MM/yyyy" size="10"
 								requiredMessage="Data de admissão é obrigatório" />
 						</p:column>
 					</p:row>
@@ -67,7 +70,7 @@
 							<p:outputLabel value="Data de rescisão:"></p:outputLabel>
 						</p:column>
 						<p:column>
-							<p:calendar
+							<p:calendar value="#{funcionarioBean.funcionario.dtDemissao}"
 								onkeypress="mascara(this,data)" pattern="dd/MM/yyyy" size="10"/>
 						</p:column>
 					</p:row>
