--- a/Contratos.Web/WebContent/views/Cadastro/listaContrato.xhtml
+++ b/Contratos.Web/WebContent/views/Cadastro/listaContrato.xhtml
@@ -6,9 +6,9 @@
 	xmlns:p="http://primefaces.org/ui">
 	<ui:define name="conteudo">
 		<br/>
-		<p:panel header="Projetos">
+		<p:panel header="Projetos" style="border: hidden;">
 			<p:dataTable value="#{listaProjetosBean.projetos}" var="projeto"
-			 			 paginator="true" rows="10" scrollRows="5"
+			 			 paginator="true" rows="10"
 			 			 selection="#{listaProjetosBean.projetoSelecionado}" selectionMode="single"
 			 		rowKey="#{projeto.id}">
 			 			 <p:column headerText="CN" filterBy="cn">
@@ -17,12 +17,6 @@
 			 			 <p:column headerText="Nome" filterBy="descricao">
 			 			 	<p:outputLabel value="#{projeto.descricao}"/>
 			 			 </p:column>
-			 			 <p:column headerText="Setor" filterBy="setor.nome">
-							<p:outputLabel value="#{projeto.setor.nome}"/>
-						</p:column>
-						<p:column headerText="Atividade" filterBy="atividade.nome">
-							<p:outputLabel value="#{projeto.atividade.nome}"/>
-						</p:column>
 						<p:column headerText="Data Inicio">
 							<h:outputText value="#{projeto.dtInicio.time}">
 								<f:convertDateTime pattern="dd/MM/yyyy"/>
@@ -34,7 +28,7 @@
 							</h:outputText>
 						</p:column>
 					<f:facet name="footer">
-						<p:commandButton value="Editar Projeto" action="contratos.xhtml"/>
+						<p:commandButton value="Editar Projeto" action="editarContratos.xhtml"/>
 					</f:facet>
 			</p:dataTable>
 			<p:messages autoUpdate="true" showSummary="true" showDetail="true"/>
