inicio de testes envio de relatorio com atividades por email

--- a/Contratos.Web/WebContent/views/Cadastro/cadastraAtividade.xhtml
+++ b/Contratos.Web/WebContent/views/Cadastro/cadastraAtividade.xhtml
@@ -40,6 +40,7 @@
 			</p:dataTable>
 			<p:dialog hideEffect="clip" showEffect="clip" closable="false"
 				 modal="false" widgetVar="atividade"  header="Cadastrar Atividade" >
+				 <p:fileUpload label="Atestado"/>
 				 <p:panelGrid styleClass="panel_inf_proj">
 				 	<p:row>
 				 		<p:column>
